--- a/README.org
+++ b/README.org
@@ -11,9 +11,9 @@ Based on [DOT_RydSim.jl](https://github.com/dojt/DOT_RydSimDeriv.jl).
 
 ** Version History
 
-Time goes up!
+/Time goes up!/
 
 
-****  **v0.1.0**  Initial version
+****  *v0.1.0*  Initial version
 
 EOF
