README.org: fixed typos

--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
 
 Based on [DOT_RydSim.jl](https://github.com/dojt/DOT_RydSimDeriv.jl).
 
-** TODO
+** TODO Blah?
    [ ] Extend `RydSim.jl` and to 3 level atoms with Raman pulse on the lower two.
 
 
