--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 
 Derivatives for quantum simulations of arrays of Rydberg atoms.
 
-Based on [DOT_RydSim.jl](https://github.com/dojt/DOT_RydSimDeriv.jl).
+Based on [[https://github.com/dojt/DOT_RydSimDeriv.jl][DOT_RydSim.jl]]
 
 ** TODO
 
