--- a/README.org
+++ b/README.org
@@ -24,6 +24,8 @@ Based on [[https://github.com/dojt/DOT_RydSim.jl][DOT_RydSim.jl]]
 
 /Time goes up!/
 
+*** *v0.3.0*  New `𝛥𝑡()` function; `𝑡ᵒⁿ_𝑡ᵒᶠᶠₘᵢₙ𝛺`, `𝑡ᵒⁿ_𝑡ᵒᶠᶠₘᵢₙ𝛥` in `get_hw_data()`.
+
 *** *v0.2.1*  New Policy: Evolution functions now return `NaN` in case of arithmetic errors.
 
 *** *v0.2.0*  API-breaking: Now Evol-functions take `𝚷`-matrix instead of ϕ-vector
