--- a/README.org
+++ b/README.org
@@ -24,8 +24,10 @@ Based on [[https://github.com/dojt/DOT_RydSim.jl][DOT_RydSim.jl]]
 
 /Time goes up!/
 
-*** *v0.4.1*  Fixed `𝛥𝑡()`
+*** *v0.4.2*  Fixed bug `Evolution_𝑋`-constructors
 
+
+*** *v0.4.1*  Fixed `𝛥𝑡()`
 
 *** *v0.4.0*  API BREAKING!  Moved to `𝛿𝑡ᵉᶠᶠ`-interface for evolutions
 
